# personal_clone

./: .env.example  .gitignore  Dockerfile  GEMINI.md  MANIFESTO.md  Makefile  README.md  __init__.py  adk_metadata.json  data_analyst.py  deploy.py  deploy.sh  deploy_engine.py  deploy_test.py  deployment_metadata.json  docker-compose.yml  entrypoint.sh  env_to_toml.py  google_adk_metadata.py  instructions.md  login.py  main.py  main_engine.py  main_requests.py  main_runner.py  people.py  plan.md  pyproject.toml  requirements.txt  rollback.sh  run_developer_agent.py  runner_modules.py  sessions_runner.db  setup.py  start.sh  starter_pack_README.md  starter_pack_pyproject.toml  test.py  test_deployment.py
.backup_personal_clone_20251108_150151/: README.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/: financial_analyst_agent.py
app/: agent.py  agent_engine_app.py  config.py  data.py
app/app_utils/: .requirements.txt  deploy.py  tracing.py  typing.py
app/callbacks/: before_after_agent.py
app/sub_agents/: bigquery_agent.py  github_agent.py  memory_agent.py  pinecone_agent.py  vertex_search_agent.py
app/tools/: bigquery_examples.py  clickup_tools.py  pinecone_tools.py  session_state_tools.py  vertex_tools.py
data/: .tg_poll_offset
deployment/terraform/: build_triggers.tf  variables.tf
installation_scripts/: install.sh
interface_slack/: slack_bot.py
interface_tg/: __init__.py  tg_bot.py
personal_clone/: .agent_engine_config.json  __init__.py  agent.py  agent_engine_app.py  clickup_utils.py  config.py  data.py  developer_utils.py  gdrive_utils.py  github_agent.py  github_utils.py  instructions.py  log_utils.py  pinecone_utils.py  search.py  secure_config.py  session_signals.py  session_utils.py  slack_app.py  telegram_poller.py
personal_clone/.adk/: session.db
personal_clone/app_utils/: .requirements.txt  agent_runner.py  config_manager.py  deploy.py  scheduler_instance.py  telemetry.py  typing.py
personal_clone/callbacks/: before_after_agent.py  before_after_model.py  before_after_tool.py  before_agent.py
personal_clone/coding_agents/: developer_agent.py  github_agent.py  openapi_agent.py
personal_clone/sub_agents/: bigquery_agent.py  (+14 more)
tool_config/: my_toolset.py
utils/: weather.py
(+31 files in other folders)
