[project]
name = "personal-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "google-adk>=1.17.0",
    "google-cloud-aiplatform>=1.122.0",
    "google-cloud-bigquery-storage>=2.33.1",
    "google-genai>=1.46.0",
    "litellm>=1.79.0",
    "lxml>=6.0.2",
    "pinecone[asyncio]>=7.3.0",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
]
